--- a/_posts/2022-03-23-測試.md
+++ b/_posts/2022-03-23-測試.md
@@ -1,15 +1,11 @@
 ---
-title: "測試文章"
+title: "文章範例"
 categories:
   - 雜七雜八
 tags:
-  - content
-  - css
-  - edge case
-  - lists
-  - markup
+  - 寫作指南
 ---
 
-# 測試文章
+## 內文第一層標題
 
-這是我的第一篇文章。
+文章內容的第一層標題，請使用兩個升記號來作為開頭，也就是 `##`。第二層子標題則用 `###`，依此類推。最多請不要超過三層標題。
