--- a/_posts/2022-03-23-Windows-放大鏡快速鍵.md
+++ b/_posts/2022-03-23-Windows-放大鏡快速鍵.md
@@ -8,14 +8,14 @@ tags:
 
 整理：許育豪
 
-開啟放大鏡：Windows + 加號
-關閉放大鏡：Windows + Esc
-放大：Windows + 加號
-縮小：Windows + 減號
-使用滑鼠滾輪調整放大倍率：Ctrl + Alt + 滑鼠滾輪
-水平移動放大區域：Ctrl + Alt + 方向鍵
-螢幕色彩返轉：Ctrl + Alt + I
-全螢幕模式：Ctrl + Alt + F
-固定放大模式：Ctrl + Alt + D
-透鏡模式：Ctrl + Alt + L
-在 [完全]、[固定] 和 [透鏡]模式之間切換：Ctrl + Alt + M
+- 開啟放大鏡：Windows + 加號
+- 關閉放大鏡：Windows + Esc
+- 放大：Windows + 加號
+- 縮小：Windows + 減號
+- 使用滑鼠滾輪調整放大倍率：Ctrl+Alt+滑鼠滾輪
+- 水平移動放大區域：Ctrl+Alt+方向鍵
+- 螢幕色彩返轉：Ctrl+Alt+I
+- 全螢幕模式：Ctrl+Alt+F
+- 固定放大模式：Ctrl+Alt+D
+- 透鏡模式：Ctrl+Alt+L
+- 在 [完全]、[固定] 和 [透鏡]模式之間切換：Ctrl + Alt + M
