--- a/docs/文章的編寫與發布.md
+++ b/docs/文章的編寫與發布.md
@@ -1,12 +1,12 @@
 ---
-title: "撰寫文章並上傳至文件庫"
+title: "文章的編寫與發布"
 categories:
   - 寫作
 tags:
   - 寫作指南
 ---
 
-這篇文章要告訴你的是：如何將你的文章上傳至 NVDA 文件庫。
+這篇文章要告訴你的是：如何撰寫文章，並且上傳至 NVDA 文件庫。
 
 ## 基礎知識
 
@@ -50,6 +50,8 @@ tags:
 範例：
 
 ~~~~~~~~
+作者：麥克阿瑟
+
 ## Gmail 簡介
 
 Gmail 是 Google 提供的電子郵件服務。
@@ -57,7 +59,6 @@ Gmail 是 Google 提供的電子郵件服務。
 ## 常用快速鍵
 
 下表是常用的 Gmail 快速鍵……
-
 ~~~~~~~~
 
 文章寫好之後，請遵照此格式來替檔案命名：「yyyy-mm-dd-文章標題.md」。其中 yyyy 是四位數的西元年，mm 是兩位數的當前月份，dd 則是兩位數的日期。文章標題就跟你的文章檔頭裡面的 title 屬性一樣，主要是為了方便日後查找。
