--- a/_posts/2021-09-14-nvda-2021-2-更新摘要.md
+++ b/_posts/2021-09-14-nvda-2021-2-更新摘要.md
@@ -32,5 +32,6 @@ NVDA 2021.2 是以 Windows 11 的初步支持和重要功能的 Bug 修復以及
 移動導航物件到下一個物件 | NVDA+小鍵盤數位3 | NVDA+Shift+下翻頁 | 移動導航物件到下一個物件（跨越物件層級）
 在鍵盤上類比按下 Application 鍵 | NVDA+單引號 | NVDA+單引號 | 用於缺少該按鍵的個別鍵盤（「單引號」一般位於分號鍵右側）
 
-詳細的更新內容請查看 NVDA 2021.1 更新日誌，如果您在打開以上網頁後，流覽器進行了自動翻譯，此時請手動案 F6 調節相關選項以關閉網頁的自動翻譯。
-點此前往中文站下載頁獲取新版
+詳細的更新內容請查看 [NVDA 2021.1 更新日誌](https://app.assembla.com/spaces/screenReaderTranslations/subversion/source/HEAD/zh_CN/changes.html?_format=raw&disposition=inline)，如果您在打開以上網頁後，瀏覽器進行了自動翻譯，此時請手動案 F6 調節相關選項以關閉網頁的自動翻譯。
+
+[點此前往中文站下載頁獲取新版](https://nvdacn.com/index.php/nvda.html)
