--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -8,9 +8,11 @@ tags:
 
 這篇文章要告訴你的是：如何撰寫文章，並且上傳至 NVDA 文件庫。
 
-## 基礎知識
+## 基礎知識與條件
 
-你需要具備 Markdown 語法來撰寫你的文章。
+你必須有一個 GitHub 使用者帳號，而且這個帳號必須有寫入此文件庫的權限。在貢獻你的創作之前，請寫一封信給[管理員](mailto:huanlin.tsai@gmail.com)，告知你想加入寫作小組，以及你的 GitHub 帳號。待管理員加入權限之後，便可進行後續的文件編寫與上傳操作。
+
+此外，你還需要具備 Markdown 語法來撰寫你的文章。
 
 ## 步驟一：撰寫文章
 
