--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -6,7 +6,7 @@ tags:
   - 寫作指南
 ---
 
-這篇文章要告訴你的是：如何撰寫文章，並且上傳至 NVDA 文件庫。
+這篇文章要告訴你的是：如何撰寫文章，並且上傳至本文件庫。
 
 ## 基礎知識與條件
 
@@ -68,7 +68,7 @@ Gmail 是 Google 提供的電子郵件服務。
 
 ## 步驟二：上傳文章
 
-1. 用瀏覽器開啟網址：https://github.com/visualaids/nvda-doc/upload/master/_posts，這是上傳檔案的頁面。
+1. 用瀏覽器開啟網址：https://github.com/visualaids/nvdoc/upload/master/_posts，這是上傳檔案的頁面。
 2. 在此頁面中找到 choose your files 按鈕，點此按鈕即可上傳你的文章檔案。
 3. 在此頁面下方的 Commit changes 欄位中輸入簡短的文字描述，以說明這次上傳的內容。你也可以不加入說明文字，採用 GitHub 網頁預設提供的文字，然後移往頁面下方的 Commit changes 按鈕，點此按鈕即可將你挑選的檔案上傳。
 
