--- a/_docs/文章範例.md
+++ b/_docs/文章範例.md
@@ -6,6 +6,8 @@ tags:
   - 寫作指南
 ---
 
+作者：王大同 （註：文章的第一行建議寫作者姓名，或者文章摘要）
+
 ## 內文第一層標題
 
 文章內容的第一層標題，請使用兩個升記號來作為開頭，也就是 `##`。第二層子標題則用 `###`，依此類推。最多請不要超過三層標題。
