--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -16,7 +16,7 @@ tags:
 
 ## 步驟一：撰寫文章
 
-首先，用文字編輯器寫好一篇文章，內容格式必須以 Markdown 編寫，文章頂端必須包含以下檔頭：
+首先，用文字編輯器寫好一篇文章，內容格式必須以 Markdown 編寫，文章頂端必須包含一個檔頭區塊（front matter）。檔頭區塊的開始標記與結束標記都是連續三個半形減號（即 dash 符號），參考以下範例：
 
 ~~~~~~~~
 ---
@@ -26,10 +26,10 @@ tags:
 ---
 ~~~~~~~~
 
-每次撰寫新文章的時候，你可以把上面的文字區塊複製到你的文章的頂端，再修改各個屬性的內容。主要的屬性有兩個：
+除了檔頭區塊的開始與結束標記，位於檔頭區塊中的內容，則是一些用來描述這篇文章的屬性。每次撰寫新文章的時候，你可以把上面的文字區塊複製到你的文章的頂端，再修改各個屬性的內容。上面的範例有兩個屬性：
 
-- title：文章標題，請以雙引號來包住你的文章標題。
-- tags：標籤，也就是文章內容所牽涉的議題。一篇文章可以有多個標籤，每一個標籤寫成單獨一行。
+- `title`：文章標題，請以雙引號來包住你的文章標題。
+- `tags`：標籤，也就是文章內容所牽涉的議題。一篇文章可以有多個標籤，每一個標籤寫成單獨一行。
 
 每一篇文章都應該加入適當的標籤，以便日後尋找相同議題的文章。比如說，如果你的文章內容是關於微軟 Excel 的使用技巧，就可以加入 "Excel" 標籤，那麼其他人在閱讀文章的時候，只要點擊 "Excel" 標籤，網站就會列出所有使用 Excel 標籤的文章。
 
@@ -48,7 +48,7 @@ tags:
 
 接在文章檔頭區塊底下的，就是文章的內文。你可以在自己創作的文件中標示作者姓名，亦可加註授權聲明，但授權方式必須與此文件庫的授權一致。
 
-內文如果需要加入子標題，請使用兩個升記號來作為第一層標題的開頭，也就是 `##`。第二層子標題則用 `###`，依此類推。最好不要超過三層標題。
+內文如果需要加入子標題，請使用兩個升記號來作為第一層標題的開頭，也就是 `##`。第二層子標題則用 `###`，依此類推。一篇文章裡面的標題層次最好不要超過三層。
 
 範例：
 
