--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -67,6 +67,17 @@ Gmail 是 Google 提供的電子郵件服務。
 
 文章寫好之後，請遵照此格式來替檔案命名：「yyyy-mm-dd-文章標題.md」。其中 yyyy 是四位數的西元年，mm 是兩位數的當前月份，dd 則是兩位數的日期。文章標題就跟你的文章檔頭裡面的 title 屬性一樣，主要是為了方便日後查找。
 
+值得一提的是，如果你在發布文章後的某一天修改了文章內容，網站依然會以此文章的檔案名稱中的日期來做為文章的最後更新日期。如果你希望文章更新之後，可以出現在網頁排序結果的頂端，則可以在此文章的檔頭區塊加入 `date` 屬性來明確指出此文章的最後更新時間。日期格式也是 yyyy-mm-dd。範例如下：
+
+~~~~~~~~
+---
+title: "G-mail 常用快速鍵"
+date: 2022-03-25
+tags:
+  - gmail
+---  
+~~~~~~~~
+
 ## 步驟二：上傳文章
 
 如果你已經有 GitHub 帳號，而且已經有寫入此文件庫的權限，便可依下列步驟來上傳你的文章：
