--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -27,7 +27,7 @@ tags:
 ---
 ~~~~~~~~
 
-介於檔頭區塊開始與結束標記之間的內容，是一些用來描述這篇文章的屬性。每次撰寫新文章的時候，你可以把上面的文字區塊複製到你的文章的頂端，再修改各個屬性的內容。上面的範例有兩個屬性：
+檔頭區塊裡面可以加入一些用來描述這篇文章的屬性。每次撰寫新文章的時候，可以把上面的文字區塊複製到你的文章的頂端，再修改各個屬性的內容。上面的範例有兩個屬性：
 
 - `title`：文章標題，請以雙引號來包住你的文章標題。
 - `tags`：標籤，也就是文章內容所牽涉的議題。一篇文章可以有多個標籤，每一個標籤寫成單獨一行。
