--- a/_posts/2022-03-23-本站文章的編寫與發布.md
+++ b/_posts/2022-03-23-本站文章的編寫與發布.md
@@ -11,7 +11,7 @@ tags:
 
 ## 基礎知識與條件
 
-你必須有一個 GitHub 使用者帳號，而且這個帳號必須有寫入此文件庫的權限。在貢獻你的創作之前，請寫一封信給[管理員](mailto:huanlin.tsai@gmail.com)，告知你想加入寫作小組，以及你的 GitHub 帳號。待管理員加入權限之後，便可進行後續的文件編寫與上傳操作。
+你必須有一個 GitHub 使用者帳號，而且這個帳號必須有寫入此文件庫的權限。在貢獻你的創作之前，請寫一封信給[管理員](mailto:huanlin.tsai@gmail.com)，告知你想要直接上傳檔案的權限，以及你的 GitHub 帳號。待管理員加入權限之後，便可進行後續的文件編寫與上傳操作。
 
 此外，你還需要懂 Markdown 語法，才能撰寫符合本站格式的文章。
 
