新增pc系列、送給愛音樂的你系列以及rp中文化介紹

--- a/_posts/2022-03-28-好軟體推薦-1-替代youtube-dl的解決方案.md
+++ b/_posts/2022-03-28-好軟體推薦-1-替代youtube-dl的解決方案.md
@@ -1,5 +1,5 @@
 ---
-title: "好軟體推薦-1 替代youtube-dl的解決方案"
+  : "好軟體推薦-1 替代youtube-dl的解決方案"
 categories:
   - 好軟體推薦
 tags: 
@@ -8,7 +8,6 @@ date: 2022-03-28
 ---
 
 作者:小羔羊
-我的更多原創文章可以到[這裡](https://lamb.tw/)閱讀!
 
 ### 好軟體推薦-1 替代youtube-dl的解決方案
 
@@ -70,3 +69,7 @@ yt-dlp https://www.youtube.com/watch?v=_B8RaLCNUZw
 123 網址
 另外，以我目前100m下載速度的網路，一首歌大概10秒內能完成，不確定的話再cmd的視窗李按小鍵盤7或九，發現他沒再刷新那就是完成了，
 如果想要改變下載回來的檔案格式，可以參考github下的說明，按h跳標題可以找到。
+
+---
+
+如果想閱讀我的更多原創文章，可以到我的網站→[小羔羊分享站](https://lamb.tw/)
