--- a/_posts/2021-09-14-nvda-2021-2-更新摘要.md
+++ b/_posts/2021-09-14-nvda-2021-2-更新摘要.md
@@ -3,7 +3,7 @@ title: "NVDA 2021.2 更新摘要"
 categories:
   - NVDA
 tags:
-  - "NVDA 更新消息""
+  - "NVDA 更新消息"
 ---
 
 來源：[NVDA2021.2 更新简报 by Eureka](https://www.nvdacn.com/index.php/archives/895/)
