--- a/_posts/2022-03-28-windows10-鍵盤快速鍵.md
+++ b/_posts/2022-03-28-windows10-鍵盤快速鍵.md
@@ -56,7 +56,7 @@ tags:
 * Alt + Page Up 移到上一個畫面
 * Alt + Page Down 移到下一個畫面
 * Ctrl + F4 關閉使用中的文件 (在全螢幕的應用程式中，讓您同時開啟多份文件) 
-  > 備註：這裡指的情況，就像是在網頁瀏覽時開啟兩個以上的分業，就可以使用Ctrl + F4來關閉目前焦點所在的分業了。
+  > 備註：這裡指的情況，就像是在網頁瀏覽時開啟兩個以上的分頁，就可以使用Ctrl + F4來關閉目前焦點所在的分頁了。
 * Ctrl + A 選取文件或視窗中所有的項目。
 * Ctrl + D (或 Delete)將選取的項目刪除並移到資源回收筒
 * Ctrl + R (或 F5) 重新整理使用中視窗
@@ -90,7 +90,9 @@ tags:
   > 備註：上面的切換鍵是指類似開關的一種控制項，nvda朗讀的屬性名稱為切換按鈕。
 
 ## Windows 標誌鍵鍵盤快速鍵
-> 備註：這裡寫的 windows 標誌鍵指的就是我們常說的 win鍵或視窗鍵。
+
+備註：這裡寫的 windows 標誌鍵指的就是我們常說的 Win 鍵或視窗鍵。
+
 * Windows 標誌鍵 開啟或關閉 [開始]。
 * Windows 標誌鍵  + A 開啟 [控制中心]。
 * Windows 標誌鍵  + B 將焦點設在通知區域中。
