--- a/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-2-聲卡篇-ssl2.md
+++ b/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-2-聲卡篇-ssl2.md
@@ -2,9 +2,9 @@
 title: "送給愛音樂的你-設備評測介紹-2-聲卡篇 ssl2"  
 author: "小羔羊"  
 categories: 
-  - 送給愛音樂的你-設備評測介紹
+  - 設備評測
 tags: 
-  - 開箱和設備評測  
+  - 設備評測
 date: 2021-08-28T15:24:03+08:00  
 ---  
   
