--- a/_posts/2022-03-28-pc雜談-1-解決虛擬機無法打開主機的共用資料夾問題.md
+++ b/_posts/2022-03-28-pc雜談-1-解決虛擬機無法打開主機的共用資料夾問題.md
@@ -12,7 +12,7 @@ date: 2022-02-19T15:24:03+08:00
   作者:小羔羊  
   
   
-### pc雜談-1 解決虛擬機無法打開主機的共用資料夾問題  
+## pc雜談-1 解決虛擬機無法打開主機的共用資料夾問題  
   
 大家好，這次要來分享windows共用資料夾的疑難雜症解決方法，  
 從以前，我一直有使用vmware來安裝虛擬機測試各種軟體的習慣，  
