--- a/_posts/2022-03-28-pc雜談-2-關閉相容舊版輸入法的ctrl+空格.md
+++ b/_posts/2022-03-28-pc雜談-2-關閉相容舊版輸入法的ctrl+空格.md
@@ -12,7 +12,7 @@ date: 2022-02-19T15:24:03+08:00
   作者:小羔羊  
   
 
-### pc雜談-2 關閉相容舊版輸入法的ctrl+空格
+## pc雜談-2 關閉相容舊版輸入法的ctrl+空格
 
 hi各位，
 在最近幾年，微軟推出了新版的中文輸入法，而這個新版的輸入法在最開始，會導致使用nvda螢幕閱讀軟體的用戶無法選字，
