--- a/_posts/2022-03-28-好軟體推薦-1-替代youtube-dl的解決方案.md
+++ b/_posts/2022-03-28-好軟體推薦-1-替代youtube-dl的解決方案.md
@@ -9,7 +9,7 @@ date: 2022-03-28
 
 作者:小羔羊
 
-### 好軟體推薦-1 替代youtube-dl的解決方案
+## 好軟體推薦-1 替代youtube-dl的解決方案
 
 如果有使用過youtube-dl的人應該會發現在最近不知道從何時開始，youtube-dl下載的速度變得非常緩慢，
 這可能是因為youtube封鎖的youtube-dl的下載，也有可能是youtube-dl的作者也不怎麼在維護的原因，
