--- a/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-1-聲卡篇-roland-rubix44.md
+++ b/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-1-聲卡篇-roland-rubix44.md
@@ -10,7 +10,7 @@ date: 2021-08-28T15:24:03+08:00
 
   作者:小羔羊
   
-### 送給愛音樂的你-設備評測介紹-1-聲卡篇 roland rubix44  
+## 送給愛音樂的你-設備評測介紹-1-聲卡篇 roland rubix44  
 
   
 ### 錄音介面的基本構造  
