--- a/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-2-聲卡篇-ssl2.md
+++ b/_posts/2022-03-28-送給愛音樂的你-設備評測介紹-2-聲卡篇-ssl2.md
@@ -10,7 +10,7 @@ date: 2021-08-28T15:24:03+08:00
   
   作者:小羔羊  
   
-### 送給愛音樂的你-設備評測介紹-2-聲卡篇 ssl2  
+## 送給愛音樂的你-設備評測介紹-2-聲卡篇 ssl2  
   
 這次要介紹的是ssl2，  
 以我自己所接觸的算起，大概是第三張生卡，也是我覺得特別適合推薦給剛入門的朋友的一張，  
