學習資源彙整-修正網址-小羔羊分享站-導引到分類文章

--- a/_posts/2022-05-15-學習資源彙整.md
+++ b/_posts/2022-05-15-學習資源彙整.md
@@ -17,7 +17,7 @@ tags:
  * 重度視障者的數學讀寫
  * 點字規則
  * NVDA
-* [小羔羊分享站](https://lamb.tw/)
+* [小羔羊分享站](https://lamb.tw/categories/)
  * 音頻軟體教學_RX
  * reaper 
  * izotope
