學習資源彙整-修正錯字-音頻軟體教學_RX

--- a/_posts/2022-05-15-學習資源彙整.md
+++ b/_posts/2022-05-15-學習資源彙整.md
@@ -18,7 +18,7 @@ tags:
  * 點字規則
  * NVDA
 * [小羔羊分享站](https://lamb.tw/categories/)
- * 音頻軟體教學_RX
+ * 音頻軟體教學
  * reaper 
  * izotope
 * [VIP 視障數位學習平台](http://vipel.colife.org.tw/index.aspx)
