--- a/_posts/2022-05-15-學習資源彙整.md
+++ b/_posts/2022-05-15-學習資源彙整.md
@@ -60,6 +60,6 @@ tags:
 
 ## 口述影像
 
- * [口述影像連結整理 | 視覺障礙輔助科技筆記本](https://class.kh.edu.tw/19061/bulletin/msg_view/349)
+ * [視覺障礙輔助科技筆記本：口述影像連結整理](https://class.kh.edu.tw/19061/bulletin/msg_view/349)
  * [臺北市立圖書館：用心看電影](https://blind.tpml.edu.tw/sp.asp?xdurl=superxd/go2movie.asp&mp=10&ctNode=295)
  * [國立臺灣圖書館：電影聽賞](https://viis.ntl.edu.tw/viresouces/lp?cat=%E9%9B%BB%E5%BD%B1%E8%81%BD%E8%B3%9E)
