修正超連結，111.06.08 [南大]

--- a/_posts/2022-05-15-學習資源彙整.md
+++ b/_posts/2022-05-15-學習資源彙整.md
@@ -41,7 +41,7 @@ tags:
 ## 教材製作
 
 * [數學教材點譯筆記](https://github.com/huanlin/VisualAids/blob/main/MathML/%E6%95%B8%E5%AD%B8%E6%95%99%E6%9D%90%E8%BD%89%E8%AD%AF%E7%AD%86%E8%A8%98/%E6%95%B8%E5%AD%B8%E6%95%99%E6%9D%90%E8%BD%89%E8%AD%AF%E7%AD%86%E8%A8%98.md)
-* [111.06.08 [南大] 視障生通用教材製作]()
+* [111.06.08 [南大] 視障生通用教材製作](https://class.kh.edu.tw/19061/bulletin/msg_view/679)
 * [111.06.11 [南大] 視障生通用數學教材製作](https://class.kh.edu.tw/19061/bulletin/msg_view/680)
 * [重度視障者的數學讀寫／教材製作](https://class.kh.edu.tw/19061/page/view/19) by 視覺障礙輔助科技筆記本
 
